--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,14 @@ a {
   text-decoration: none;
 }
 
-.container {
+.big-container {
   max-width: 1220px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
+.container {
+  max-width: 920px;
   padding: 0 10px;
   margin: 0 auto;
 }
@@ -115,4 +121,76 @@ body {
     margin-top: auto;
     margin-bottom: 30px;
     align-self: center;
+}
+
+.info{
+  margin-bottom: 100px;
+}
+
+.info__part{
+  padding-top: 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.info__part--third{
+  padding-top: 66px;
+}
+
+.info__part--first{
+  display: block;
+}
+
+.info__title{
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  font-weight: 300;
+  font-size: 32px;
+}
+
+.info__part-textbox{
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.info__text{
+  flex-basis: 440px;
+  margin-bottom: 30px;
+}
+
+.info_part-img{
+  object-fit: cover;
+}
+
+.info_content{
+  flex-basis: 415px;
+}
+
+.info__part--second .info__text{
+  max-width: 352px;
+}
+
+.info__part--third .info__text{
+  max-width: 377px;
+}
+
+.info__table{
+  flex-basis: 450px;
+  border-bottom: 1px solid #040404;
+  position: relative;
+  top: 20px;
+}
+
+.info__table::before{
+  content: '';
+  border-bottom: 1px solid #040404;
+  position: absolute;
+  width: 100%;
+  top: -20px;
+}
+
+.info__table td{
+  padding-bottom: 20px;
 }
