--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,37 @@ body {
 .info__table td{
   padding-bottom: 20px;
 }
+
+.track{
+  background-image: url(../images/track-bg.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.track__inner{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.track__title{
+  padding-top: 50px;
+  padding-bottom: 30px;
+  font-size: 32px;
+  font-weight: 300;
+}
+
+.track__text{
+  max-width: 435px;
+  /* flex-basis: 435px; */
+}
+
+.track__img{
+  /* по умолчанию картинка строчная делаем ее блочной
+  display: block;
+  margin: 0 auto;
+  отступ от текста до картинкт 250пх
+  margin-top: 250px; */
+  margin: auto auto 90px auto;
+}
