--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,139 @@ body {
   margin-top: 250px; */
   margin: auto auto 90px auto;
 }
+
+.evo{
+  font-size: 14px;
+  margin-bottom: 100px;
+}
+
+.evo-black{
+  background-color: #363636;
+  padding: 100px 0 50px;
+  /* задаем цвет во всей секции */
+  color: #FFFFFF;
+}
+
+.evo-black__inner{
+  position: relative;
+}
+
+.evo-black__inner::before{
+  content: '';
+  background-image: url(../images/dec-1.svg);
+  position: absolute;
+  width: 185px;
+  height: 213px;
+  /* ставим элемнт на место */
+  top: 210px;
+  left: -130px;
+}
+
+.evo-black__inner::after{
+  content: '';
+  background-image: url(../images/dec-2.svg);
+  position: absolute;
+  width: 498px;
+  height: 572px;
+  /* ставим элемнт на место */
+  top: 290px;
+  left: -40px;
+}
+
+.evo-black__info{
+  display: flex;
+  justify-content: space-between;
+}
+
+.evo-black__title{
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  padding-right: 50px;
+}
+
+.evo-black__infobox{
+  flex-basis: 437px;
+}
+
+.evo-black__text{
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
+.evo-black-img{
+  display: block;
+  margin: 160px auto 60px;
+  position: relative;
+  z-index: 1;
+}
+
+.evo__descr-list{
+  display: flex;
+  justify-content: center;
+  gap: 0 65px;
+}
+
+.evo__descr-list dd{
+  text-transform: uppercase;
+}
+
+.evo-white__inner{
+  padding-top: 125px;
+  position: relative;
+}
+
+.evo-white__inner::before{
+  content: '';
+  background-image: url(../images/dec-3.png);
+  position: absolute;
+  width: 274px;
+  height: 257px;
+  /* ставим элемнт на место */
+  top: -30px;
+  left: 360px;
+}
+
+.evo-white__inner::after{
+  content: '';
+  background-image: url(../images/dec-4.png);
+  position: absolute;
+  width: 324px;
+  height: 311px;
+  /* ставим элемнт на место */
+  top: 115px;
+  left: 600px;
+}
+
+.evo-white__text{
+  margin-bottom: 30px;
+}
+/* обращаемся по почереди к 3м параграфам */
+.evo-white__text:first-child{
+  max-width: 285px;
+}
+.evo-white__text:nth-child(2){
+  max-width: 437px;
+}
+.evo-white__text:nth-child(3){
+  max-width: 590px;
+}
+/* обращаемся по почереди к 3м параграфам */
+
+.evo-white__video{
+  margin-top: 100px;
+  background-image: url(../images/evo-video.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.evo-white__vdeo-linck span{
+  display: block;
+  color: #FFFFFF;
+}
