--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ a {
   text-decoration: none;
 }
 
+li{
+  list-style: none;
+}
+
 .big-container {
   max-width: 1220px;
   padding: 0 10px;
@@ -433,16 +437,20 @@ body {
 }
 
 .blockquote__name{
+  /*  */
   font-style: inherit;
+  /*  */
   font-weight: 700;
   margin-bottom: 10px;
 }
 
+/*  */
 .fio {
   font-style: inherit;
   font-weight: 700;
   margin-bottom: 10px;
 }
+/*  */
 
 .blockquote__name span{
   display: block;
@@ -454,4 +462,66 @@ body {
 
 .blockquote__text{
   font-style: italic;
+}
+
+.footer{
+  padding: 100px 0 80px;
+  background-color: #363636;
+  color: #FFFFFF;
+}
+
+.footer__title{
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+
+.footer__top{
+  display: flex;
+  justify-content: space-between;
+  gap: 0 20px;
+}
+
+.footer__info-item{
+  margin-bottom: 40px;
+}
+
+.footer__info-item dt,
+.footer__address-title{
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer__info-item dd{
+  margin-bottom: 10px;
+}
+
+.social-list{
+  display: flex;
+  gap: 0 20px;
+  align-items: center;
+}
+
+.footer__address{
+  flex-basis: 462px;
+}
+/* обращение через id (селектор для id) */
+#map{
+  height: 250px;
+}
+
+.footer__address-text{
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.footer__bottom{
+  /* указываем 35пх тк ввержу 88 пх и часть уже подвинуто на 50пх */
+  margin-top: 35px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
