--- a/css/style.css
+++ b/css/style.css
@@ -525,3 +525,109 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+
+.menu-mobile,
+.menu-btn{
+  display: none;
+}
+
+@media (max-width: 1100px) {
+  .promo {
+    background-position: left center;
+  }
+  .menu-list{
+    display: none;
+  }
+  .menu-mobile{
+    display: flex;
+    gap: 0 20px;
+  }
+  .logo-img{
+    width: 50px;
+  }
+  .nav{
+    align-items: center;
+  }
+  .title {
+    font-size: 64px;
+  }
+  .subtitle {
+    font-size: 42px;
+  }
+  .subtitle span {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 820px) {
+  .menu-btn{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 45px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    /* прописываем что бы его было видно на открытом черном меню */
+    z-index: 10;
+  }
+  .menu-btn span{
+    height: 3px;
+    width: 100%;
+    background-color: #FFFFFF;
+  }
+  .menu-mobile{
+    display: none;
+  }
+  .menu-mobile.menu--open{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #040404;
+    height: 100vh;
+    z-index: 5px;
+    text-align: center;
+    padding-top: 140px;
+  }
+  .menu-link{
+    color: #FFFFFF;
+    /* 3% высоты шрифт в процентах в зависимости от размера экрана! */
+    font-size: 3vh;
+    /* что бы кликалась вся строка а не ток слово */
+    display: block;
+    padding: 20px 0;
+  }
+  /* пишем что бы на открытом меню было видно логотим для того что бы закрыть меню */
+  .logo{
+    z-index: 10;
+  }
+}
+
+@media (max-width: 560px) {
+  .title {
+    font-size: 48px;
+  }
+  .subtitle {
+    font-size: 34px;
+  }
+  .subtitle span {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 340px) {
+  .title {
+    font-size: 42px;
+  }
+  .subtitle {
+    font-size: 30px;
+  }
+  .menu-link{
+    padding: 15px 0;
+  }
+}
