--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ li{
   list-style: none;
 }
 
+img{
+  max-width: 100%;
+}
+
 .big-container {
   max-width: 1220px;
   padding: 0 10px;
@@ -559,7 +563,13 @@ body {
   }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 969px){
+  .evo-white__inner::after {
+    display: none;
+  }
+}
+
+@media (max-width: 840px) {
   .menu-btn{
     display: flex;
     flex-direction: column;
@@ -606,6 +616,80 @@ body {
   .logo{
     z-index: 10;
   }
+  .info__part-textbox{
+    display: block;
+    padding-bottom: 15px;
+  }
+  .info__part{
+    display: block;
+  }
+  .info__part--second .info__text,
+  .info__part--third .info__text{
+    max-width: 100%;
+  }
+  .info__table{
+    width: 100%;
+  }
+  .info_part-img{
+    width: 1000%;
+  }
+}
+
+@media (max-width: 768px){
+  .blog_quote{
+    flex-direction: column;
+  }
+  .blog_quote-box{
+    flex-basis: auto;
+  }
+  .blog_quote-img{
+    order: -1;
+  }
+  .blog__item-img{
+    width: 100%;
+  }
+  .info__part{
+    padding-top: 50px;
+  }
+  .evo-black-img {
+    margin-top: 130px;
+  }
+  .evo-white__inner{
+    padding-top: 75px;
+  }
+  .evo-white__video{
+    margin-top: 50px;
+  }
+  .blog,
+  .blog__slider,
+  .evo{
+    margin-bottom: 50px;
+  }
+  .footer{
+    padding: 50px 0;
+  }
+}
+
+@media (max-width: 669px){
+  .evo-white__inner::before{
+    display: none;
+  }
+  .evo__descr-list{
+    display: block;
+    text-align: center;
+  }
+  .evo__descr-list div{
+    margin-bottom: 15px;
+  }
+  .evo-black__info{
+    display: block;
+  }
+  .evo-black__title{
+    margin-bottom: 20px;
+  }
+  .footer__top{
+    display: block;
+  }
 }
 
 @media (max-width: 560px) {
@@ -617,6 +701,24 @@ body {
   }
   .subtitle span {
     font-size: 26px;
+  }
+  .info__table td:nth-child(2){
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .evo-black__inner::after{
+    display: none;
+  }
+}
+
+@media (max-width: 480px){
+  .footer__bottom{
+    display: block;
+    text-align: center;
+  }
+  .footer__logo{
+    display: block;
+    padding: 20px 0;
   }
 }
 
